--- a/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
+++ b/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
@@ -15,16 +15,94 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gjm-Xe-ulk">
+                                <rect key="frame" x="0.0" y="118" width="393" height="581"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WEU-b1-TzQ">
+                                <rect key="frame" x="0.0" y="714" width="393" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="14Y-Nb-4ZY">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4iZ-vv-1MG">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49W-Sv-BAC">
+                                                        <rect key="frame" x="3" y="0.0" width="60" height="60"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Mesaj Yazın" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="apF-Mq-CYK">
+                                                <rect key="frame" x="70" y="0.0" width="253" height="60"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="253" id="dqv-NK-L7H"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7q-Lc-mcm">
+                                                <rect key="frame" x="333" y="0.0" width="60" height="60"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfC-OG-dhn">
+                                                        <rect key="frame" x="-3" y="0.0" width="60" height="60"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="paperplane.fill" catalog="system"/>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="4iZ-vv-1MG" firstAttribute="leading" secondItem="14Y-Nb-4ZY" secondAttribute="leading" id="Cjg-dk-BLi"/>
+                                            <constraint firstAttribute="bottom" secondItem="4iZ-vv-1MG" secondAttribute="bottom" id="FFn-0S-M7t"/>
+                                            <constraint firstItem="4iZ-vv-1MG" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="WYZ-e2-xb4"/>
+                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="centerX" secondItem="14Y-Nb-4ZY" secondAttribute="centerX" id="hXP-kz-eed"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="14Y-Nb-4ZY" secondAttribute="bottom" constant="10" id="HTa-SV-YdB"/>
+                                    <constraint firstAttribute="trailing" secondItem="14Y-Nb-4ZY" secondAttribute="trailing" id="cqm-aV-n3L"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="leading" secondItem="WEU-b1-TzQ" secondAttribute="leading" id="pcg-pQ-08R"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="top" secondItem="WEU-b1-TzQ" secondAttribute="top" id="xHp-x9-Gsh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gjm-Xe-ulk" secondAttribute="trailing" id="FYs-XM-MGI"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="N6w-ez-jP0"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="QRe-N4-HlS"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="gjm-Xe-ulk" secondAttribute="bottom" constant="15" id="dEA-lA-cbL"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hVd-zn-f6l"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="rKM-eq-w6s"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="596" id="sO4-5G-Q9L"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="sat-cy-88c"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="48" y="-2"/>
+            <point key="canvasLocation" x="46.564885496183201" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
+        <image name="paperplane.fill" catalog="system" width="128" height="119"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
