--- a/ChatApp/Scenes/ChatList/Cell/ChatListCell.xib
+++ b/ChatApp/Scenes/ChatList/Cell/ChatListCell.xib
@@ -25,7 +25,7 @@
                             <constraint firstAttribute="width" constant="60" id="hZQ-bn-dIX"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="pW1-Cj-8Bw">
+                    <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="pW1-Cj-8Bw">
                         <rect key="frame" x="77" y="10" width="306" height="60"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PYq-Of-4FI">
@@ -87,11 +87,10 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="ii4-BX-nbF" secondAttribute="bottom" constant="10" id="0g5-Ld-VxY"/>
                     <constraint firstItem="pW1-Cj-8Bw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="77" id="Mjn-UP-CyT"/>
+                    <constraint firstItem="pW1-Cj-8Bw" firstAttribute="centerY" secondItem="ii4-BX-nbF" secondAttribute="centerY" id="OYS-sB-wHs"/>
                     <constraint firstAttribute="trailing" secondItem="pW1-Cj-8Bw" secondAttribute="trailing" constant="10" id="jYL-K4-MqN"/>
                     <constraint firstItem="ii4-BX-nbF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="mIq-0d-5OU"/>
                     <constraint firstItem="ii4-BX-nbF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="uR2-QT-hT6"/>
-                    <constraint firstAttribute="bottom" secondItem="pW1-Cj-8Bw" secondAttribute="bottom" constant="10" id="wsZ-E0-QWG"/>
-                    <constraint firstItem="pW1-Cj-8Bw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ymS-op-iOK"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
