--- a/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
+++ b/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
@@ -11,26 +11,29 @@
         <!--Chat Detail View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="ChatDetailViewController" id="Y6W-OH-hqX" customClass="ChatDetailViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChatDetail" id="Y6W-OH-hqX" customClass="ChatDetailViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gjm-Xe-ulk">
-                                <rect key="frame" x="0.0" y="118" width="393" height="581"/>
+                                <rect key="frame" x="0.0" y="118" width="393" height="579"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="579" id="wo6-Jo-Q8J"/>
+                                </constraints>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WEU-b1-TzQ">
-                                <rect key="frame" x="0.0" y="714" width="393" height="70"/>
+                                <rect key="frame" x="0.0" y="697" width="393" height="87"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="14Y-Nb-4ZY">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                                    <stackView opaque="NO" contentMode="scaleAspectFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="14Y-Nb-4ZY">
+                                        <rect key="frame" x="0.0" y="15" width="393" height="60"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4iZ-vv-1MG">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hjb-Eq-VEB">
                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49W-Sv-BAC">
-                                                        <rect key="frame" x="3" y="0.0" width="60" height="60"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sv9-7Y-Fh6">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
@@ -39,58 +42,72 @@
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Mesaj Yazın" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="apF-Mq-CYK">
-                                                <rect key="frame" x="70" y="0.0" width="253" height="60"/>
+                                                <rect key="frame" x="65" y="0.0" width="263" height="60"/>
                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="253" id="dqv-NK-L7H"/>
+                                                    <constraint firstAttribute="width" constant="263" id="4XJ-VZ-Mij"/>
                                                 </constraints>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7q-Lc-mcm">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-ds-Fo6">
                                                 <rect key="frame" x="333" y="0.0" width="60" height="60"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfC-OG-dhn">
-                                                        <rect key="frame" x="-3" y="0.0" width="60" height="60"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frI-uE-ocO">
+                                                        <rect key="frame" x="-4" y="0.0" width="60" height="60"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="paperplane.fill" catalog="system"/>
+                                                        <connections>
+                                                            <action selector="sendMessageButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zcU-gh-xZx"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="4iZ-vv-1MG" firstAttribute="leading" secondItem="14Y-Nb-4ZY" secondAttribute="leading" id="Cjg-dk-BLi"/>
-                                            <constraint firstAttribute="bottom" secondItem="4iZ-vv-1MG" secondAttribute="bottom" id="FFn-0S-M7t"/>
-                                            <constraint firstItem="4iZ-vv-1MG" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="WYZ-e2-xb4"/>
-                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="centerX" secondItem="14Y-Nb-4ZY" secondAttribute="centerX" id="hXP-kz-eed"/>
+                                            <constraint firstItem="hjb-Eq-VEB" firstAttribute="leading" secondItem="14Y-Nb-4ZY" secondAttribute="leading" id="DgK-2F-LVw"/>
+                                            <constraint firstItem="hjb-Eq-VEB" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="GWZ-9f-f8M"/>
+                                            <constraint firstAttribute="trailing" secondItem="6Vo-ds-Fo6" secondAttribute="trailing" id="J11-7C-jyB"/>
+                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="R9T-qs-ueL"/>
+                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="centerX" secondItem="14Y-Nb-4ZY" secondAttribute="centerX" id="SrU-SN-ToR"/>
+                                            <constraint firstAttribute="bottom" secondItem="6Vo-ds-Fo6" secondAttribute="bottom" id="pd0-bp-mdf"/>
+                                            <constraint firstAttribute="bottom" secondItem="hjb-Eq-VEB" secondAttribute="bottom" id="pqi-9U-byT"/>
+                                            <constraint firstItem="6Vo-ds-Fo6" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="rFH-WZ-aDR"/>
+                                            <constraint firstAttribute="bottom" secondItem="apF-Mq-CYK" secondAttribute="bottom" id="vAI-yT-lnT"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="14Y-Nb-4ZY" secondAttribute="bottom" constant="10" id="HTa-SV-YdB"/>
-                                    <constraint firstAttribute="trailing" secondItem="14Y-Nb-4ZY" secondAttribute="trailing" id="cqm-aV-n3L"/>
-                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="leading" secondItem="WEU-b1-TzQ" secondAttribute="leading" id="pcg-pQ-08R"/>
-                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="top" secondItem="WEU-b1-TzQ" secondAttribute="top" id="xHp-x9-Gsh"/>
+                                    <constraint firstAttribute="bottom" secondItem="14Y-Nb-4ZY" secondAttribute="bottom" constant="12" id="S5d-zb-G0s"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="top" secondItem="WEU-b1-TzQ" secondAttribute="top" constant="15" id="VT8-vM-xiZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="14Y-Nb-4ZY" secondAttribute="trailing" id="gcq-7y-zjr"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="leading" secondItem="WEU-b1-TzQ" secondAttribute="leading" id="qC6-vO-74Z"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gjm-Xe-ulk" secondAttribute="trailing" id="FYs-XM-MGI"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="N6w-ez-jP0"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="QRe-N4-HlS"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="gjm-Xe-ulk" secondAttribute="bottom" constant="15" id="dEA-lA-cbL"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hVd-zn-f6l"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="rKM-eq-w6s"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="596" id="sO4-5G-Q9L"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="sat-cy-88c"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="0qI-jk-KbP"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="gjm-Xe-ulk" secondAttribute="bottom" id="1vg-5k-Kyt"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="3gY-44-om0"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="bottom" secondItem="WEU-b1-TzQ" secondAttribute="top" id="4lR-IQ-DoR"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Zzj-zm-dEw"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="gIP-5b-AJe"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="mYs-KW-dY2"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="ndl-HZ-wKC"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="plusView" destination="hjb-Eq-VEB" id="lrE-tN-ZFn"/>
+                        <outlet property="sendView" destination="6Vo-ds-Fo6" id="XRs-qy-tvj"/>
+                        <outlet property="tableView" destination="gjm-Xe-ulk" id="jXD-6M-jrq"/>
+                        <outlet property="textView" destination="apF-Mq-CYK" id="Mop-3O-BpM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
