--- a/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
+++ b/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,6 +25,7 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="sFq-qf-1k0">
                                         <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMq-Xp-yeF">
                                         <rect key="frame" x="15" y="-1.6666666666666679" width="30" height="19.666666666666668"/>
@@ -73,6 +74,7 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="7KR-ts-eeL">
                                         <rect key="frame" x="30" y="0.0" width="15" height="15"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -93,13 +95,14 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="leadingConstraint" destination="E8m-za-URY" id="dvD-jA-BZ4"/>
-                <outlet property="leftTimeLabel" destination="036-3s-hI6" id="51T-0Q-3ec"/>
+                <outlet property="leftTimeLabel" destination="MMq-Xp-yeF" id="ddl-hm-7sz"/>
                 <outlet property="leftView" destination="eDD-RL-4XN" id="2n5-XC-abg"/>
-                <outlet property="leftimageView" destination="7KR-ts-eeL" id="kQb-qd-tWq"/>
+                <outlet property="leftimageView" destination="sFq-qf-1k0" id="YqK-t5-QLG"/>
                 <outlet property="messageLabel" destination="iga-af-mlc" id="W4r-Sx-huu"/>
                 <outlet property="messageView" destination="ooV-9Y-KHK" id="Wk2-0n-POk"/>
+                <outlet property="rightTimeLabel" destination="036-3s-hI6" id="ayN-Oe-xtx"/>
                 <outlet property="rightView" destination="iGd-jO-Ec5" id="MU1-No-SGB"/>
-                <outlet property="rightimageView" destination="sFq-qf-1k0" id="piI-QY-0uJ"/>
+                <outlet property="rightimageView" destination="7KR-ts-eeL" id="c78-CF-PCC"/>
                 <outlet property="trailingConstraint" destination="bUP-gk-DjE" id="PbP-eU-Jfi"/>
             </connections>
             <point key="canvasLocation" x="-22.137404580152669" y="25.35211267605634"/>
